cree carpte acon imagen de alan turing

--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+     <!--Header contiene la cabecera de nuestrapagina-->
+     <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/turing">turing</a>
+                </li>
+                    <li>
+                        <a href="/hamilton">hamilton</a>
+                    </li>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <h1>Bienvenidos a nuestra pagina</h1>
 </body>
 </html>
