edite archivo turing.html cambie el nombre del na y acomode el parrafo

--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
                     <a href="/">Home</a>
                 </li>
                 <li>
-                    <a href="/turing">turing</a>
+                    <a href="/turing">Alan Turing</a>
                 </li>
                     <li>
                         <a href="/hamilton">hamilton</a>
