Agregue mas imagenes de alan turing

--- a/views/turing.html
+++ b/views/turing.html
@@ -45,6 +45,7 @@
         </section>
         <aside>
             <img src="/img/Alan-Turing/Alan-turing.jpg" alt="Imagen de alan Turing ">
+            <img src="/public/img/Alan-Turing/" alt="Imagen de alan Turing ">
         </aside>
 
     </main>
