--- a/views/turing.html
+++ b/views/turing.html
@@ -45,7 +45,9 @@
         </section>
         <aside>
             <img src="/img/Alan-Turing/Alan-turing.jpg" alt="Imagen de alan Turing ">
-            <img src="/public/img/Alan-Turing/" alt="Imagen de alan Turing ">
+            <img src="/img/Alan-Turing/Alan-Turing 2.jpg" alt="Imagen de alan Turing ">
+            <img src="/img/Alan-Turing/Alan-Turing 3.jpg" alt="Imagen de alan Turing ">
+            <img src="/public/img/Alan-Turing/alan-turing 4.jpg" alt="Imagen de alan Turing ">
         </aside>
 
     </main>
