Cambie el tamaño de las imagenes en html

--- a/views/turing.html
+++ b/views/turing.html
@@ -44,10 +44,10 @@
 
         </section>
         <aside>
-            <img src="/img/Alan-Turing/Alan-turing.jpg" alt="Imagen de alan Turing ">
-            <img src="/img/Alan-Turing/Alan-Turing 2.jpg" alt="Imagen de alan Turing ">
-            <img src="/img/Alan-Turing/Alan-Turing 3.jpg" alt="Imagen de alan Turing ">
-            <img src="/public/img/Alan-Turing/alan-turing 4.jpg" alt="Imagen de alan Turing ">
+            <img src="/img/Alan-Turing/Alan-turing.jpg" alt="Imagen de alan Turing " width="200px">
+            <img src="/img/Alan-Turing/Alan-Turing 2.jpg" alt="Imagen de alan Turing " width="270px">
+            <img src="/img/Alan-Turing/Alan-Turing 3.jpg" alt="Imagen de alan Turing "width="400px">
+            <img src="img/Alan-Turing/Alan-turing4.jpg" alt="Imagen de alan Turing "width="375px" >
         </aside>
 
     </main>
