--- a/views/turing.html
+++ b/views/turing.html
@@ -22,7 +22,7 @@
     <!--ma-in contendra toda la parte estructural de nuestra pagina-->
     <main>
         <section><!--cada seccion debe tener su titulo-->
-            <h1>Alan turing</h1>
+            <h1>Alan Turing</h1>
             <article>
                 <p><strong> ALan Mathison Turing</strong> (Paddington, Londres; 23 de junio de 1912-Wilmslow, Cheshire; 7 de junio de 1954) fue un matemático, lógico, informático teórico, criptógrafo, filósofo y biólogo teórico británico.
 
@@ -35,6 +35,7 @@
                     La carrera de Turing terminó súbitamente tras ser procesado por homosexualidad en 1952. Dos años después de su condena, murió —según la versión oficial por suicidio; sin embargo, su muerte ha dado lugar a otras hipótesis, incluida la del envenenamiento accidental —. Después de una campaña pública en 2009, el primer ministro británico, Gordon Brown, se disculpó públicamente en nombre del gobierno británico por «la forma espantosa en que [Turing] había sido tratado». La reina Isabel II le otorgó un indulto póstumo en 2013. El término «ley Alan Turing» ahora se usa de manera informal para referirse a una ley de 2017 en el Reino Unido que perdona retroactivamente a hombres amonestados o condenados en virtud de la legislación que prohibía los actos homosexuales.
                     
                     Turing tiene un extenso legado con estatuas y muchas cosas que llevan su nombre, incluido un premio anual por innovación en informática. Aparece en el billete actual de 50 libras del Banco de Inglaterra,que se lanzó el 23 de junio de 2021, coincidiendo con su cumpleaños. Un programa de la BBC de 2019, votado por la audiencia, lo nombró la persona más grande del siglo xx.</p>
+                    
             </article>
         </section><!--Estructura semantica para tenr un mejor seo-->
         <section>
@@ -49,6 +50,7 @@
             <img src="/img/Alan-Turing/Alan-Turing 3.jpg" alt="Imagen de alan Turing "width="400px">
             <img src="img/Alan-Turing/Alan-turing4.jpg" alt="Imagen de alan Turing "width="375px" >
         </aside>
+        <a href="https://es.wikipedia.org/wiki/Alan_Turing#" target="_blank">Alan Turing - wikipedia</a>
 
     </main>
     <!-- fotter es el pie de pagina , es el final de la pagina-->
