agregue archivos para hacer la estructura de lovelace

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,22 @@
                     <a href="/turing">Alan Turing</a>
                 </li>
                     <li>
+                        <a href="/lovelace">Ada Lovelace</a>
+                    </li>
+                    <li>
+                        <a href="/hamilton">hopper</a>
+                    </li>
+                    <li>
                         <a href="/hamilton">hamilton</a>
+                    </li>
+                    <li>
+                        <a href="/hamilton">clarke</a>
+                    </li>
+                    <li>
+                        <a href="/hamilton">bernees-lee</a>
+                    </li>
+                    <li>
+                        <a href="/hamilton">babbage</a>
                     </li>
                 </li>
             </ul>
