agrego el logo de la comision 17 y cambio el h1 principal

--- a/views/index.html
+++ b/views/index.html
@@ -40,6 +40,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Bienvenidos a nuestra pagina</h1>
+    <h1>Bienvenidos al Trabajo Practico DH HEroes</h1>
+    <img src="/public/img/icono-comision-17/logo-comision-17.jpg" alt="Logo de la comision 17">
 </body>
 </html>
