agrego links para direccionar las diferentes paginas de navegacion

--- a/views/turing.html
+++ b/views/turing.html
@@ -14,6 +14,12 @@
             <ul>
                 <li>
                     <a href="/">Home</a>
+                    <a href="/turing">Alan Turing</a>
+                    <a href="/turing">Ada Lovelace/a>
+                    <a href="/turing">turing</a>
+                    <a href="/turing">turing</a>
+                    <a href="/turing">turing</a>
+                    <a href="/turing">turing</a>
                     <a href="/turing">turing</a>
                 </li>
             </ul>
