--- a/views/turing.html
+++ b/views/turing.html
@@ -15,12 +15,12 @@
                 <li>
                     <a href="/">Home</a>
                     <a href="/turing">Alan Turing</a>
-                    <a href="/turing">Ada Lovelace/a>
-                    <a href="/turing">turing</a>
-                    <a href="/turing">turing</a>
-                    <a href="/turing">turing</a>
-                    <a href="/turing">turing</a>
-                    <a href="/turing">turing</a>
+                    <a href="/lovelace">Ada Lovelace</a>
+                    <a href="/hopper">Grace Hopper</a>
+                    <a href="/hamilton">Margaret Hamilton</a>
+                    <a href="/clarke">Joan Clarke</a>
+                    <a href="/berners-Lee">Tim Berners-Lee</a>
+                    <a href="/babbage">Charles Babbage</a>
                 </li>
             </ul>
         </nav>
