agregue los link para nevegar en archivo lovelace.html

--- a/views/lovelace.html
+++ b/views/lovelace.html
@@ -14,7 +14,13 @@
             <ul>
                 <li>
                     <a href="/">Home</a>
-                    <a href="/turing">turing</a>
+                    <a href="/turing">Alan Turing</a>
+                    <a href="/lovelace">Ada Lovelace</a>
+                    <a href="/hopper">Grace Hopper</a>
+                    <a href="/hamilton">Margaret Hamilton</a>
+                    <a href="/clarke">Joan Clarke</a>
+                    <a href="/berners-Lee">Tim Berners-Lee</a>
+                    <a href="/babbage">Charles Babbage</a>
                 </li>
             </ul>
         </nav>
