Arregle los link de la navegacion del home

--- a/views/index.html
+++ b/views/index.html
@@ -22,19 +22,19 @@
                         <a href="/lovelace">Ada Lovelace</a>
                     </li>
                     <li>
-                        <a href="/hamilton">hopper</a>
+                        <a href="/hopper">Grace Hopper</a>
                     </li>
                     <li>
-                        <a href="/hamilton">hamilton</a>
+                        <a href="/hamilton">Margaret Hamilton</a>
                     </li>
                     <li>
-                        <a href="/hamilton">clarke</a>
+                        <a href="/hamilton">Joan Clarke</a>
                     </li>
                     <li>
-                        <a href="/hamilton">bernees-lee</a>
+                        <a href="/berners-lee">Tim Berners-Lee</a>
                     </li>
                     <li>
-                        <a href="/hamilton">babbage</a>
+                        <a href="/babbage">Charles Babbage</a>
                     </li>
                 </li>
             </ul>
