--- a/views/hopper.html
+++ b/views/hopper.html
@@ -30,7 +30,9 @@
         <section><!--cada seccion debe tener su titulo-->
             <h1>Grace Hopper</h1>
             <article>
-              
+              <p><strong>Grace Murray Hopper</strong> (Nueva York, 9 de diciembre de 1906 - Condado de Arlington, 1 de enero de 1992) fue una científica de la computación y militar estadounidense con grado de contraalmirante. Fue pionera en el mundo de las ciencias de la computación y la primera programadora que utilizó el Mark I. Entre las décadas de los 50 y 60 desarrolló el primer compilador para un lenguaje de programación así como también propició métodos de validación. 
+                Popularizó la idea de los lenguajes de programación independientes de la máquina, lo que derivó en el desarrollo de COBOL, un lenguaje de alto nivel de programación que aún se utiliza. Era conocida por sus amistades como Amazing Grace.</p>
+                <p>Grace Brewster Murray nació en Nueva York (EE. UU.). Grace era bisnieta de Alexander Russell, un almirante de la Armada de los Estados Unidos. Él fue su modelo y su héroe personal. También era nieta de un ingeniero civil, John Van Horne. Sus padres fueron Walter Fletcher Murray, corredor de seguros, y Mary Campbell Van Horne. Desde muy pequeña demostró aptitudes para las ciencias y la matemática. Recibió siempre el apoyo de su abuelo y de su padre para que las estudiara, pues quería que sus hijas tuvieran las mismas oportunidades que su hijo varón. También le atrajo mucho cualquier tipo de dispositivo mecánico, tanto fue así, que con 7 años desarmó todos los relojes de su casa para ver si podía entender cómo funcionaban. En 1930 se casa con Vincent Foster Hopper, un doctor en literatura en lengua inglesa que durante muchos años fue presidente del departamento de inglés de la Universidad de Nueva York. Vincent y Grace se divorciaron en 1945 sin tener hijos.</p>
                     
             </article>
         </section><!--Estructura semantica para tenr un mejor seo-->
