acomodo la ruta de las imagenes em la pagina de hamilton

--- a/views/hamilton.html
+++ b/views/hamilton.html
@@ -52,10 +52,10 @@
 
         </section>
         <aside>
-            <img src="/public/img/Margaret hamilton/Margaret_Hamilton_1989.jpg" alt="Imagen Margaret Hamilton " width="200px">
-            <img src="/public/img/Margaret hamilton/Margaret_Hamilton_1995.jpg" alt="Imagen Margaret Hamilton " width="270px">
-            <img src="/public/img/Margaret hamilton/Margaret_Hamilton_in_action.jpg" alt="Imagen Margaret Hamilton"width="400px">
-            <img src="/public/img/Margaret hamilton/RDZE4XLRYVEQLPDE6D3UJYEVHQ.jpg" alt="Imagen Margaret Hamilton"width="375px" >
+            <img src="/img/Margaret hamilton/Margaret_Hamilton_1989.jpg" alt="Imagen Margaret Hamilton " width="200px">
+            <img src="/img/Margaret hamilton/Margaret_Hamilton_1995.jpg" alt="Imagen Margaret Hamilton " width="270px">
+            <img src="/img/Margaret hamilton/Margaret_Hamilton_in_action.jpg" alt="Imagen Margaret Hamilton"width="400px">
+            <img src="/img/Margaret hamilton/RDZE4XLRYVEQLPDE6D3UJYEVHQ.jpg" alt="Imagen Margaret Hamilton"width="375px" >
         </aside>
         <a href="https://es.wikipedia.org/wiki/Grace_Murray_Hopper" target="_blank">Grace Hopper - wikipedia</a>
 
