--- a/views/404.html
+++ b/views/404.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>error 404</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <!--Header contiene la cabecera de nuestrapagina-->
+    <header>
+        <nav>
+        </nav>
+    </header>
+    <!--ma-in contendra toda la parte estructural de nuestra pagina-->
+    <main>
+        <section><!--cada seccion debe tener su titulo-->
+            <h1></h1>
+            <article>
+                       
+            </article>
+        </section><!--Estructura semantica para tenr un mejor seo-->
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+        <aside>
+        </aside>
+    </main>
+    <!-- fotter es el pie de pagina , es el final de la pagina-->
+    <footer>
+        <section>
+        </section>
+        <section>
+            <h3></h3>
+          
+        </section>
+    </footer>
 </body>
 </html>
