--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
      <!--Header contiene la cabecera de nuestrapagina-->
@@ -40,7 +40,6 @@
             </ul>
         </nav>
     </header>
-    <h1>Bienvenidos al Trabajo Practico DH HEroes</h1>
-    <img src="/img/icono-comision-17/logo-comision-17.jpg" alt="Logo de la comision 17">
+    <h1>Bienvenidos al Trabajo Practico DH Heroes</h1>
 </body>
 </html>
