cambide de imagen en el error 404

--- a/views/404.html
+++ b/views/404.html
@@ -17,6 +17,7 @@
     <main>
         <section><!--cada seccion debe tener su titulo-->
             <h1></h1>
+            <img src="/img/404/Blue Error 404  Instagram post (1).png"
             <article>
                        
             </article>
